--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
     "description": "A IA para a sua consulta médica.",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#14b8a6",
-    "theme_color": "#14b8a6",
+    "background_color": "#7BC3D4",
+    "theme_color": "#7BC3D4",
     "icons": [
         {
             "src": "/icon-192x192.png",
