--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.4.6",
+    "onnxruntime-node": "^1.22.0-rev",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.1.2",
