--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "next": "14.2.4",
     "next-themes": "^0.4.6",
     "onnxruntime-node": "^1.22.0-rev",
+    "pdf-parse": "^2.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.1.2",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
